[B]Newznab 0.2.5[/B]
- Sort on name, size and date
- Youtube trailer search

[B]Newznab 0.2.4[/B]
- Send User-agent
- Fixed error handling
- Show HD icon

[B]Newznab 0.2.3[/B]
- Fix crash on first init
- Remove import function

[B]Newznab 0.2.2[/B]
- Updated to support the new Pneumatic release. Moved Local and Incomplete to top node.

[B] 0.2.1[/B] 
- No more beta

[B]Beta 4[/B]
- Apikey required for site caps, browse local nzb's in Pneumatic

[B]Beta 3[/B]
- Possible to access +100 search results, rating fix 

[B]Beta 2[/B]
- My Movies and My Shows added

[B]Beta[/B]
- Cache function