@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.newznab"
        name="Newznab"
-       version="0.2.5"
+       version="0.3.0"
        provider-name="Popeye">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="plugin.program.pneumatic" version="0.3.1"/>
-    <import addon="plugin.video.youtube" version="4.4.2"/>
-</requires>
-  <extension point="xbmc.python.pluginsource"
-            library="default.py">
-        <provides>video</provides>
+  </requires>
+  <extension point="xbmc.python.pluginsource" library="default.py">
+    <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <summary>Newznab</summary>
     <description>Browse and stream from all newznab.com compatible sites</description>
-    <disclaimer>Requires the Pneumatic add-on and SABnzbd</disclaimer>
+    <disclaimer>Requires the Pneumatic add-on and SABnzbd add-on</disclaimer>
   </extension>
 </addon>
